[project]
name = "test-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.1",
    "marimo>=0.18.4",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=5.18.0",
    "polars[pyiceberg]>=1.31.0",
    "pyarrow>=20.0.0",
    "pyiceberg==0.9.0",
    "requests>=2.32.3",
    "ruff>=0.11.11",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.32.0",
    "torch>=2.7.0",
]
